--- a/home.html
+++ b/home.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>welcome</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+  <title>Space2's Prototype</title>
 </head>
 <body>
-  <h1>WELCOME</h1>
-  <p>Yo my friends, Just started to make my simple website. Now, lemme ask you one question; This is the process in which the cytoplasm of the original cell is divided and distributed to the two daughter cell, further more nucleus also undergoes division termed KARYOKINESIS. WHAT IS THIS PROCESS?TOPIC: GEN-BIO(chat me to answer yoi)</p>
+<nav>
+ <nav link=""></nav>
+</nav>
+ <ul>
+ <li></li>
+ <li></li>
+ <li></li>
+</ul>
+  <h1></h1>
+  <p></p>
 
 </body>
 </html>
