--- a/home.html
+++ b/home.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-  <title>Space2's Prototype</title>
-</head>
-<body>
-<nav>
- <nav link=""></nav>
-</nav>
- <ul>
- <li></li>
- <li></li>
- <li></li>
-</ul>
-  <h1></h1>
-  <p></p>
-
-</body>
-</html>
+print('It's')
